# pwf

./: .Rhistory  .gitignore  Makefile  README.md  environment.py  pyproject.toml  raven.py  reticulate.R
functions/: .RData  .Rhistory  __init__.py  corrplot.py  environment.py  examples.py  explore_assumptions.py  explore_descriptives.py  explore_time_series.py  functions.py  functions_cdf.py  functions_check_dataframe.py  functions_environment.py  functions_excel.py  functions_generate_data.py  functions_generic.py  functions_keys.py  functions_mathematical.py  functions_matrix.py  functions_plot.py  functions_recode.py  functions_statistical.py  functions_strings.py  functions_timestamp.py  functions_train_test.py  functions_train_test_full.py  functions_unix_time.py  glm_anova_plot.py  glm_correlation.py  glm_efa.py  glm_hlr.py  glm_irt.py  glm_irt_t.py  glm_irt_u.py  glm_lda.py  glm_linear_regression.py  glm_logistic_regression.py  glm_means.py  glm_one_way_anova.py  glm_reliability.py  (+4 more)
notes/: virtual_environment.txt
sublime/: pystatistics.sublime-project  pystatistics.sublime-workspace  python_virtual_environment.py  settings.txt
tests/: conftest.py  test_glm_means.py
